# list-comp

./: .env.example  .gitignore  EXPERIMENTS.md  Order_by_Scale paper.txt  README.md  compare_saes.py  interp_btk_sae.py  interp_main.py  model_utils.py  new_grid_search.py  pdf_parse_job.sh  pyproject.toml  requirements.txt  results.csv  sae.pt  sae2.pt  sae_comparison.md  sae_sweep.py  sep_token_sae_batch_topk.pt  submit_job.sh  sweep.yaml  temp.py  test_swap_bounds.py  train.py  train_btk_sae.py
.github/: copilot-instructions.md
grid_search/: ablation_res.csv  listlen_grid_search.py  nb_results_heatmap.py  new_grid_search.py
model_scripts/: __init__.py  data.py  interp.py  interp_utils.py  model_utils.py  sae_analysis.py  train.py
models/: 2layer_100dig_64d_LBVO-TTTT_20260120-174324_acc0.9250.pt  L2_H1_D64_V100_260121-141809_acc0.9277.pt  L2_H2_D64_V100_260121-151646_acc0.9470.pt  L2_H3_D64_V100_260121-153449_acc0.9305.pt  L2_H4_D64_V100_260121-155250_acc0.4402.pt  L3_H1_D64_V100_len3_260121-143443_acc0.9962.pt  L3_H1_D64_V20_len3_260120-183452_acc0.9992.pt  L3_H1_D64_V50_len4_260205-114252_acc0.9710.pt  L4_H1_D64_V20_len4_260120-183548_acc0.9887.pt  L4_H1_D64_V4_260204-112242_acc1.0000.pt
notebooks/: nb_190126.py  nb_2026-01-19.py  nb_2026-01-20.py  nb_2026-02-02.py  nb_2026-02-03.py  nb_20260120.py  nb_20260202.py  nb_2026_01_19.ipynb  nb_2026_01_19.py  nb_2026_01_20.ipynb  nb_2026_01_20.py  nb_2026_02_02.ipynb  nb_2026_02_02.py  nb_2026_02_04.py  nb_2026_02_05.ipynb  nb_2026_02_05.py  nb_2026_02_13.ipynb  nb_2026_02_13.py  nb_2026_02_17.ipynb  nb_2026_02_17.py  nb_2026_02_26.py  nb_utils.py
reference/: 5_Order_by_Scale_Relative_Magn.md  [ref] OLD_train_btk_sae.py
report/: REPORT_NOTES.md  failure_analysis_feat30_2025.md  sae_comparison.md  sae_comparison_20260205_183204.md  sae_comparison_20260302_142432.md  sae_comparison_5feb.md  saes_report_5feb.md
sae_models/: info.txt  sae2.pt  sae_d100_k4_2layer_100dig_64d.pt  sae_d150_k2_2layer_100dig_64d.pt  sae_d150_k4_2layer_100dig_64d.pt  sae_d150_k4_50000steps_2layer_100dig_64d.pt  sae_d200_50000steps_k4_2layer_100dig_64d.pt  sae_d200_k4_2layer_100dig_64d.pt  sae_d256_50ksteps_k4_2layer_100dig_64d.pt
scripts/: analyze_failure_reasons.py  compare_sae.py  interpret_model.py  (+7 more)
(+161 files in other folders)
