[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "list-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dictionary-learning>=0.1.0",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.2.0",
    "tqdm>=4.67.3",
    "transformer-lens>=2.17.0",
    "umap-learn>=0.5.11",
    "wandb>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
