[project]
name = "list-comp"
version = "0.1.0"
description = "Further Experiments for Order by Scale paper"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Theo Farrell", email = "theo.farrell99@outlook.com"},
]
maintainers = [
    { name = "Theo Farrell", email = "theo.farrell99@outlook.com"},
]
dependencies = [
    "dictionary-learning>=0.1.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.2.0",
    "tqdm>=4.67.3",
    "transformer-lens>=2.17.0",
    "wandb>=0.25.0",
]

[project.urls]
Repository = "https://github.com/Theosdoor/list-comp"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
